# lilcxx

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.txt  TODO.json  TODO.txt  build.sh  build.tcl  complil.sh  features.json  future_cmds.cpp  gen_gitInfo.sh  gen_lilcxx_cpp.tcl  kcov_all.sh  lil1  lilcpp.dic  list_cmds.txt  orginal_readme.txt  randomNums.txt  srcToC.tcl  valgrind_all.sh
.github/workflows/: cmake.yml
atom/: readme.txt
atom/language-lil/grammars/: lil.cson
docs/: newcommands.tcl  tcl_base.tcl
inc/: LilcxxTest.h  MemCache.h  comp_info.h  funcPointers.h  git_info.h  lil.h  lil_inter.h  lilcxxTest.h  narrow_cast.h  string_format.h
main/: main.cpp  unittest.cxx
msvc/vc2019a/lilcxxsh/: lilcxxsh.sln  lilcxxsh.vcxproj  lilcxxsh.vcxproj.filters
msvc/vc2019b/lilcxxsh/: CMakeLists.txt  lilcxxsh.cpp  lilcxxsh.h
src/: LilcxxTest.cpp  lil.cpp  lil_cmds.cpp  lil_eval_expr.cpp  lil_serialize.cpp  lilcxxTest.cpp  tclExpr.cpp
unittest_scripts/: and.lil  filter.lil.result1  filter.lil.result2
unittest_scripts/orig_output/: and.lil.result1  call.lil.result1  catcher.lil.result1  dollar.lil.result1  downeval.lil.result1  enveval.lil.result1  expr.lil.result1  extract.lil.result1  funcs.lil.result1  jaileval.lil.result1  lists.lil.result1  local.lil.result1  mlcmt.lil.result1  recfuncdef.lil.result1  renamefunc.lil.result1  result.lil.result1  return.lil.result1  robot.lil.result1  strings.lil.result1  topeval.lil.result1  trim.lil.result1  upeval.lil.result1  watch.lil.result1
unittest_scripts/test_stats/: README.txt
