# CMakeList.txt : CMake project for lilcxxsh, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("lilcxxsh")

# Add source to this project's executable.
add_executable (lilcxxsh "lilcxxsh.cpp" "lilcxxsh.h")

# TODO: Add tests and install targets if needed.
